# inspirv

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: instruction.rs  io.rs  lib.rs  module.rs  read_binary.rs  types.rs  write_binary.rs
src/core/: enumeration.rs  instruction.rs  mod.rs
