[package]
name = "inspirv"
version = "0.1.0"
authors = ["msiglreith <msiglreith@users.noreply.github.com>"]
build = "build/main.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/msiglreith/inspirv"
keywords = ["spir-v"]

[dependencies]
bitflags = "0.7.0"
byteorder = "0.5.3"
enum_primitive = "0.1.0"
num-traits = "0.1.34"

[build-dependencies]
json = "0.10.0"
